--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -33,6 +33,8 @@ source "drivers/pcie/Kconfig"
 
 source "drivers/gpio/Kconfig"
 
+source "drivers/hash/Kconfig"
+
 source "drivers/interrupt_controller/Kconfig.shared_irq"
 
 source "drivers/spi/Kconfig"
