--- a/samples/boards/nucleo/nucleo_f756zg/hash/prj.conf
+++ b/samples/boards/nucleo/nucleo_f756zg/hash/prj.conf
@@ -9,11 +9,9 @@ CONFIG_HASH_STM32=y
 #CONFIG_HASH_STM32_INT=y
 CONFIG_HASH_STM32_DMA=y
 
-#CONFIG_DMA=y
-#CONFIG_SOC_FAMILY_STM32=y
-#CONFIG_HAS_STM32CUBE=y
-#CONFIG_USE_STM32_HAL_HASH=y
-#CONFIG_USE_STM32_HAL_HASH_EX=y
+CONFIG_DMA=y
+CONFIG_DMA_STM32=y
+#CONFIG_DMA_STM32_V1=y
 
 #CONFIG_CONSOLE=y
 #CONFIG_UART_CONSOLE=y
